--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "C_Cpp.default.compilerPath": "C:/msys64/ucrt64/bin/g++.exe",
-    "editor.snippetSuggestions": "bottom"
+    "editor.snippetSuggestions": "bottom",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
